added default constructors for entities and fixed fixed creating default roles on startup